styles.css
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 0;
    flex-wrap: wrap;
    display: flex;
    flex-direction: column;
}

html,
body {
    min-height: 100vh;
    width: 100%;
    overflow-x: hidden;
}

img {
    background-color: grey;
    display: flex;
    flex-wrap: wrap;
    width: 80%;
    flex: 0 1 auto;
}

.header {
    background-color: #1F2937;
    color: #F9FAF8;
    display: flex;
    padding: 10px 15%;
    gap: 20px;
    justify-content: flex-end;
    align-items: center;
}

.header a:hover {
    color: #3882F6;
}

.logo {
    margin-right: auto;
    font-size: 40px
}


.header-container {
    /* border: 2px red solid; */
    background-color: #1F2937;
    /* min-height: 400px; */
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    padding: 50px 15%;
    
}

.left-side{
    /* border: 2px red solid; */
    display: flex;
    flex-direction: column;
    height: 100%;
    flex-grow: 0;
    flex-shrink: 1;
    flex-basis: 50%;
    width: calc(100% / 6);
    justify-content: center;
    align-items: flex-start;
    
    flex-wrap: wrap;
    min-width: 0;
    gap: 16px;
}

.left-side button {
    padding: 5px 30px;
    background: #3882F6;
    border-radius: 10px;
    color: #eee;
    font-weight: 700;
    font-size: 18px;
    color: #E5E7EB;
    border: 0.5px solid #E5E7EB;
    transition: 400ms;
    display: flex;
}

.left-side button:hover {
    background: #eee;
    color: #3882F6;
    border: 1px solid #3882F6;
    transition: 400ms;
}

.right-side{
    /* border: 2px red solid; */
    display: flex;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 10%;
    width: calc(100% / 6);
    height: 100%;
    justify-content: center;
    align-items: center;
}

h1 {
    display: flex;
    font-size: clamp(1rem, -0.7241rem + 5.5172vw, 3rem);
    color: #F9FAF8;
    font-weight: 900;
}

p {
    font-size: clamp(0.75rem, 0.4267rem + 1.0345vw, 1.125rem);
    color: #E5E7EB;
}

h2 {
    text-align: center;
    font-size: clamp(0.75rem, -0.5431rem + 4.1379vw, 2.25rem);
    color: #1F2937;
    font-weight: 900;
    padding-top: 30px;
}
.content-img {
    display: flex;
    flex-wrap: wrap;
    flex: 0 1 auto;
    width: 10rem;
    height: 10rem;
    border: 5px solid #3882F6;
    border-radius: 5px;
    background: #eee;
}

.content-img:hover {
    border: 5px solid #1F2937;
    transition: 400ms;
}

.content-container {
    /* border: 2px solid rgb(0, 255, 26); */
    min-height: 400px;
    width: 100%;
    display: flex;
    flex-flow: row;
    padding: 0 15%;
    justify-content: center;
    align-items: center;
}

.content {
    /* border: 2px solid rgb(0, 98, 255); */
    display: flex;
    gap: 100px;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
    padding: 40px;
    
}

.content-img-p {
    /* border: 2px solid red; */
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    justify-content: center;
    max-width: 300px;
    max-height: 100%;
    flex: 0 1 auto;
    
}

.content p {
    font-size: clamp(0.625rem, 0.3017rem + 1.0345vw, 1rem);
    color: #1F2937;
    max-width: 160px;    
}

.quote-container {
    /* border: 1px solid red; */
    /* height: 400px; */
    width: 100%;
    display: flex;
    flex-flow: column wrap;
    padding: 50px 15%;
    background: #E5E7EB;
    justify-content: center;
    align-items: center;
}

.quote-signature {
    /* border: 1px solid red; */
    display: flex;
    align-self: center;
    flex-flow: column nowrap;
    flex: 0 1 auto;
    max-width: 90%;
    gap: 16px;
}
.quote {
    /* border: 1px solid red; */
    font-size: clamp(1.25rem, 0.6034rem + 2.069vw, 2rem);
    font-style: italic;
    color: #1F2937;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-self: center;
}

.quote-sig {
    font-size: clamp(0.75rem, 0.1034rem + 2.069vw, 1.5rem);
    font-weight: 700;
    color:#1F2937;
    display: flex;
    width: 55%;
    justify-content: flex-end;
    align-self: flex-end;
}

.content-two-container {
    /* border: 2px solid rgb(0, 255, 26); */
    min-height: 300px;
    width: 100%;
    display: flex;
    flex-flow: column;
    padding: 0 15%;
    justify-content: center;
    align-items: center;
}

.content-two {
    /* border: 2px solid red; */
    background: #3882F6;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 50px;
    height: 8rem;
    width: 70%;
    padding: 20px 30px;
    border-radius: 10px;
}

.contentleft,
.contentright {
    /* border: 3px solid salmon; */
    display: flex;
    flex-flow:column nowrap;
    justify-content: center;
    height: 100%;
    gap: 10px;
}

.contentleft {
    flex-grow: 0;
    padding: 10px;
    align-items: flex-start;
}

.contentright {
    flex-grow:0;
    justify-content: center;
    align-items: flex-end;
}
.action {
    font-size: clamp(1rem, 0.7845rem + 0.6897vw, 1.25rem);
    font-weight: 700;
    color: #E5E7EB;
}
.tagline {
    font-size: clamp(0.75rem, 0.4267rem + 1.0345vw, 1.125rem);
    color: #E5E7EB;
    
}

.contentright button {
    padding: 5px 30px;
    background: #3882F6;
    border-radius: 10px;
    color: #eee;
    font-weight: 700;
    font-size: clamp(0.625rem, 0.3017rem + 1.0345vw, 1rem);
    color: #E5E7EB;
    border: 2px solid #E5E7EB;
    transition: 400ms;
    display: flex;
    
}

.contentright button:hover {
    background: #eee;
    color: #3882F6;
    border: 1px solid #3882F6;
    transition: 400ms;
}

